front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
    tier: front
spec:
  selector: # postgresql Pod Should contain same labels
    matchLabels:
      app: front
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: front
        tier: front
    spec:
      containers:
        - name: front
          #image: docker.io/hazemfelhi/papellofront:0.3
          #image: docker.io/hazemfelhi/papellofr:v1
          #image: docker.io/hazemfelhi/papellofn:v2
          image: docker.io/hazemfelhi/frpapello:v1
          ports:
              - containerPort: 9000
