front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
    tier: front
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: front
    tier: front
